tests/error/errors_on_usage/else_type_change.err
Error: Different types (at $FILE:11:11)
   | 
 9 |     else:
10 |         y = True
11 |     return y
   |            ^ Variable `y` may refer to different types
   | 
 8 |         y += 1
   |         - This is of type `int`
   | 
10 |         y = True
   |         - This is of type `bool`

Guppy compilation failed due to 1 previous error
